--- a/css/style.css
+++ b/css/style.css
@@ -74,29 +74,45 @@ table, th {
 
 select {
     margin-top: 20px;
-    background-color: #CD7F32;
+    background-color:burlywood;
     font-weight: bolder;
     font-size: medium;
     padding: 10px;
     width: 300px;
-    border: 3px solid #CD7F32;
+    border: 3px solid burlywood;
 }
 
 .filter {
     background-color: transparent;
-    border: 5px solid #51361a;
-    color: #51361a;
-    font-weight: bolder;
+    border: 5px solid #CD7F32;
+    color: #CD7F32;
+    font-weight: bold;
     font-size: medium;
     text-transform: uppercase;
     padding: 10px;
     width: 250px;
     border-radius: 50px;
     margin-top: 30px;
+    margin-bottom: 50px;
+}
+
+ a{
+    background-color: transparent;
+    border: 5px solid #CD7F32;
+    color: #CD7F32;
+    font-weight: bolder;
+    text-decoration: none;
+    font-size: medium;
+    text-transform: uppercase;
+    padding: 20px;
+    width: 300px;
+    border-radius: 50px;
+    margin-top: 30px;
+    margin-bottom: 50px;
 }
 
 .filter:hover{
-    background-color: #51361a;
+    background-color: #CD7F32;
     color: white;
 }
 
@@ -104,3 +120,7 @@ select .style {
     background-color: #CD7F32;
     font-weight: bolder;
 }
+
+/* .widgetsResults {
+    background-color: black;
+} */
